# cookiecutter-web-backend

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  autoapp.py  backend.dockerfile  celeryworker.dockerfile  codemeta.json  docker-compose.yml  dockerfile  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  tox.ini
.sqa/: config.yaml  docker-compose.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20230905-1000-ec784700411b_initial.py  20230913-1707-d149d20b44e4_initial.py  20230914-1129-b784dabf896f_initial.py  20230915-1518-1d68939c1c55_initial.py  20230920-1911-04deff42e0f0_initial.py  20231030-0930-e4cb3fa0953e_standard.py
app/: __init__.py  __main__.py  authentication.py  config.py  database.py  dependencies.py  main.py  notifications.py  types.py  utils.py
app/api/: __init__.py  dependencies.py  deps.py
app/api_v1/: __init__.py  constants.py  exceptions.py  parameters.py  schemas.py
app/core/: authentication.py  config.py  database.py  email_processor.py  security.py
app/crud/: __init__.py  base.py  crud_template.py  crud_user.py
app/db/: __init__.py  base.py  base_class.py  session.py
app/email-templates/: db_create.j2  db_update.j2
app/models/: __init__.py  template.py  user.py
app/schemas/: __init__.py  template.py  user.py
compose/: development.yml  production.yml  testing.yml
docs/: conf.py  index.rst
docs/modules/: app.rst  (+17 more)
scripts/: setup_migration.sql  setup_sandbox.sql
tests/: conftest.py  setup_db.sql
(+55 files in other folders)
